# KCPP

./: .gitignore  .gitmodules  Bin2C.cmake  Bin2CGen.cmake  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml
KC++/: CMakeLists.txt  InputChecker.h  KC++.cpp  KC++.h  KC++PNGResGen.cmake  KC++Save.proto  KCBuild.h  KCCommon.cpp  KCCommon.h  LCDFont.h  LCDStyle.cpp  LCDStyle.h  LCDStyleSave.proto  Menu.cpp  Menu.h  Save.cpp  Save.h  Style.h  Styles.cpp  Styles.h  UsernameFinder.cpp  UsernameFinder.h  WarningManagement.h
KC++/Platform/Default/: DefaultUsername.cpp
KC++/Platform/Win32/: Win32Input.cpp  Win32Username.cpp
ext/: imgui.cmake
